# rbac-service

./: .dockerignore  .env.sample  Dockerfile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  ruff.toml
authentication/: admin.py  authentication.py  jwt.py  middleware.py  models.py  serializers.py  urls.py  utils.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_blacklistedtoken_options.py  0003_delete_blacklistedtoken.py
authentication/tests/: conftest.py  test_views.py
core/: settings.py  urls.py
orders/: mock_data.py  models.py  urls.py  views.py
rbac/: admin.py  middleware.py  models.py  serializers.py  services.py  urls.py  views.py
rbac/management/commands/: seed_rbac.py
rbac/migrations/: 0001_initial.py  0002_alter_businesselement_options_alter_role_options.py
rbac/tests/: conftest.py  test_business_element_view.py  test_permission_rule_view.py  test_role_veiw.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_role.py
users/tests/: test_views.py
